Sun Dec  7 23:26:50 2008  Minero Aoki  <aamine@loveruby.net>

	* net: revert r4100; implementing alloca() is too difficult for
	  current architecture.

Sun Dec  7 23:25:25 2008  Minero Aoki  <aamine@loveruby.net>

	* lib/libcbc.cb -> lib/stdarg.cb

	* lib/Makefile: ditto.

Sun Dec  7 22:27:51 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/CodeGenerator.java: manage stack
	  offset by generator, instead of using machine push/pop.

	* net/loveruby/cflat/asm/Assembler.java: new method
	  relocatableMov.

	* net/loveruby/cflat/asm/Assembly.java: allow fixing indirect
	  memory access offset.

	* net/loveruby/cflat/asm/Instruction.java: ditto.

	* net/loveruby/cflat/asm/AsmOperand.java: ditto.

	* net/loveruby/cflat/asm/IndirectMemoryReference.java: ditto.

	* net/loveruby/cflat/asm/IntegerLiteral.java: ditto.

	* net/loveruby/cflat/asm/Literal.java: ditto.

	* net/loveruby/cflat/asm/BaseSymbol.java: ditto.

	* net/loveruby/cflat/asm/SuffixedSymbol.java: ditto.

Sun Dec  7 17:13:45 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/LocalReferenceResolver.java ->
	  LocalResolver.java

Sun Dec  7 17:09:17 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ast/ToplevelScope.java: use SemanticException
	  instead of SemanticError for duplicated declarations/definitions.

Sun Dec  7 17:08:26 2008  Minero Aoki  <aamine@loveruby.net>

	* test: test declaration override (error path).

Sun Dec  7 16:55:56 2008  Minero Aoki  <aamine@loveruby.net>

	* test: test declaration override.

	* test/run.sh: new option --help.

Mon Nov 24 18:49:27 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/CodeGenerator.java: refactoring:
	  reduce lvar.

Sun Nov 16 23:57:08 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeResolver.java: an array on the
	  parameter list is a pointer really.

	* net/loveruby/cflat/compiler/TypeChecker.java: an array for stmt