@@ -1,0 +1,3 @@
+import stddef;
+
+extern void* alloca(size_t len);
